[gd_scene load_steps=4 format=3 uid="uid://0nmlup6yvr84"]

[ext_resource type="Script" path="res://World Scene/UIs/crafting_table.gd" id="1_763sv"]
[ext_resource type="Texture2D" uid="uid://dxqfeifbgv4c6" path="res://Assets/CraftingPlaceholder.png" id="1_nap51"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gh0p5"]
size = Vector2(32, 30)

[node name="CraftingTable" type="Area2D"]
script = ExtResource("1_763sv")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_nap51")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_gh0p5")

[node name="CraftingList" type="CanvasLayer" parent="."]

[node name="ItemList" type="ColorRect" parent="CraftingList"]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 374.0
offset_top = 60.0
offset_right = -375.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.372549, 0.372549, 0.372549, 1)

[node name="Title" type="Label" parent="CraftingList/ItemList"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -149.5
offset_top = 3.0
offset_right = 150.5
offset_bottom = 62.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Crafting List"
horizontal_alignment = 1

[node name="ItemBox" type="Control" parent="CraftingList/ItemList"]
anchors_preset = 0
offset_top = 96.0
offset_right = 402.0
offset_bottom = 136.0

[node name="Item" type="Label" parent="CraftingList/ItemList/ItemBox"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -18.0
offset_right = 202.0
offset_bottom = 18.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "No items to craft!"

[node name="ItemText" type="RichTextLabel" parent="CraftingList/ItemList/ItemBox/Item"]
texture_filter = 1
layout_mode = 0
offset_left = 234.0
offset_top = 4.0
offset_right = 402.0
offset_bottom = 29.0
text = "Come back later!"

[node name="ItemBox2" type="Control" parent="CraftingList/ItemList"]
layout_mode = 3
anchors_preset = 0
offset_top = 126.0
offset_right = 402.0
offset_bottom = 166.0

[node name="Item2" type="Label" parent="CraftingList/ItemList/ItemBox2"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -18.0
offset_right = 202.0
offset_bottom = 18.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20

[node name="Item2Text" type="RichTextLabel" parent="CraftingList/ItemList/ItemBox2/Item2"]
texture_filter = 1
layout_mode = 0
offset_left = 234.0
offset_top = 4.0
offset_right = 402.0
offset_bottom = 29.0

[node name="ItemBox3" type="Control" parent="CraftingList/ItemList"]
layout_mode = 3
anchors_preset = 0
offset_top = 155.0
offset_right = 402.0
offset_bottom = 195.0

[node name="Item3" type="Label" parent="CraftingList/ItemList/ItemBox3"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -18.0
offset_right = 202.0
offset_bottom = 18.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20

[node name="Item3Text" type="RichTextLabel" parent="CraftingList/ItemList/ItemBox3/Item3"]
texture_filter = 1
layout_mode = 0
offset_left = 234.0
offset_top = 4.0
offset_right = 402.0
offset_bottom = 29.0

[node name="ItemBox4" type="Control" parent="CraftingList/ItemList"]
layout_mode = 3
anchors_preset = 0
offset_top = 184.0
offset_right = 402.0
offset_bottom = 224.0

[node name="Item4" type="Label" parent="CraftingList/ItemList/ItemBox4"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -18.0
offset_right = 202.0
offset_bottom = 18.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20

[node name="Item4Text" type="RichTextLabel" parent="CraftingList/ItemList/ItemBox4/Item4"]
texture_filter = 1
layout_mode = 0
offset_left = 234.0
offset_top = 4.0
offset_right = 402.0
offset_bottom = 29.0

[node name="ItemBox5" type="Control" parent="CraftingList/ItemList"]
layout_mode = 3
anchors_preset = 0
offset_top = 213.0
offset_right = 402.0
offset_bottom = 253.0

[node name="Item5" type="Label" parent="CraftingList/ItemList/ItemBox5"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -18.0
offset_right = 202.0
offset_bottom = 18.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20

[node name="Item5Text" type="RichTextLabel" parent="CraftingList/ItemList/ItemBox5/Item5"]
texture_filter = 1
layout_mode = 0
offset_left = 234.0
offset_top = 4.0
offset_right = 402.0
offset_bottom = 29.0

[node name="ItemBox6" type="Control" parent="CraftingList/ItemList"]
layout_mode = 3
anchors_preset = 0
offset_top = 242.0
offset_right = 402.0
offset_bottom = 282.0

[node name="Item6" type="Label" parent="CraftingList/ItemList/ItemBox6"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -18.0
offset_right = 202.0
offset_bottom = 18.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20

[node name="Item6Text" type="RichTextLabel" parent="CraftingList/ItemList/ItemBox6/Item6"]
texture_filter = 1
layout_mode = 0
offset_left = 234.0
offset_top = 4.0
offset_right = 402.0
offset_bottom = 29.0

[node name="ItemBox7" type="Control" parent="CraftingList/ItemList"]
layout_mode = 3
anchors_preset = 0
offset_top = 271.0
offset_right = 402.0
offset_bottom = 311.0

[node name="Item7" type="Label" parent="CraftingList/ItemList/ItemBox7"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 18.0
offset_top = -18.0
offset_right = 202.0
offset_bottom = 18.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20

[node name="Item7Text" type="RichTextLabel" parent="CraftingList/ItemList/ItemBox7/Item7"]
texture_filter = 1
layout_mode = 0
offset_left = 234.0
offset_top = 4.0
offset_right = 402.0
offset_bottom = 29.0

[node name="CraftButton" type="Button" parent="CraftingList"]
texture_filter = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -227.0
offset_right = 104.0
offset_bottom = -161.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Craft Item"

[node name="CraftedItem" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CraftedItem"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -262.5
offset_right = 238.0
offset_bottom = 262.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266667, 0.266667, 0.266667, 1)

[node name="Label" type="Label" parent="CraftedItem/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -154.0
offset_top = 29.0
offset_right = 155.0
offset_bottom = 96.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "You have made"
horizontal_alignment = 1

[node name="ItemName" type="Label" parent="CraftedItem/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -187.5
offset_bottom = -138.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Something"
horizontal_alignment = 1

[node name="ItemImage" type="TextureRect" parent="CraftedItem/ColorRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.5
offset_top = -115.5
offset_right = 133.5
offset_bottom = 115.5
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2

[node name="OkayButton" type="Button" parent="CraftedItem"]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = 164.0
offset_right = 116.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Okay"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="CraftingList/CraftButton" to="." method="_on_craft_button_pressed"]
[connection signal="pressed" from="CraftedItem/OkayButton" to="." method="_on_okay_button_pressed"]
